--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "build": "NODE_ENV='production' webpack -p",
+    "start": "webpack-dev-server --open",
+    "deploy": "npm run build && firebase deploy",
+    "firebase-init": "firebase login && firebase init"
   },
   "babel": {
     "presets": [
@@ -30,6 +32,8 @@
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.18.1",
+    "uglify-js": "^3.0.15",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
